# Progetto-scacchi

./: CMakeLists.txt
lib/: ChessBoard.h  InvalidPiece.h  InvalidPosition.h  bishop.h  boardSimplified.h  king.h  knight.h  pawn.h  piece.h  position.h  queen.h  rook.h
src/: ChessBoard.cpp  bishop.cpp  boardSimplified.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  position.cpp  queen.cpp  replay.cpp  rook.cpp
